infra/longhorn/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infra
    gethomepage.dev/name: Longhorn
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/app: longhorn
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-hohepa-dev-tls
